--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,22 +13,41 @@
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
     "import numpy as np\n",
+    "import hashlib\n",
     "\n",
     "BERT_MODEL_HUB = \"https://tfhub.dev/google/bert_uncased_L-12_H-768_A-12/1\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b10a8db164e0754105b7a99be72e3fe5\n"
+     ]
+    }
+   ],
    "source": [
-    "from data_processing.preprocessing import *"
+    "hash_object = hashlib.md5(b'Hello World')\n",
+    "hash_object.hexdigest()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from preprocessing.preprocessing import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -64,20 +83,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-603305005776901102"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash('data/v1.0_sample_nq-train-sample.jsonl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json_lines\n",
+    "import os\n",
     "data = []\n",
-    "with open('v1.0_sample_nq-train-sample.jsonl', 'rb') as f: # opening file in binary(rb) mode    \n",
+    "with open('data/v1.0_sample_nq-train-sample.jsonl', 'rb') as f: # opening file in binary(rb) mode    \n",
     "   for item in json_lines.reader(f):\n",
     "       data.append(item) #or use print(item['X']) for printing specific data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +155,7 @@
        "dict_keys(['annotations', 'document_html', 'document_title', 'document_tokens', 'document_url', 'example_id', 'long_answer_candidates', 'question_text', 'question_tokens'])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +176,7 @@
        "'who is the actor that plays lucifer on tv'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +215,7 @@
        "  'yes_no_answer': 'NONE'}]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +282,7 @@
        "{99: 'thomas', 100: 'john', 101: 'ellis'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
