start model.fix preprocess

--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,39 +15,118 @@
     "import numpy as np\n",
     "import hashlib\n",
     "\n",
+    "tf.enable_eager_execution()\n",
+    "\n",
     "BERT_MODEL_HUB = \"https://tfhub.dev/google/bert_uncased_L-12_H-768_A-12/1\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from preprocessing.preprocessing import *\n",
+    "from run_nq import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_data_dir = \"/data/nq/natural_questions/v1.0/sample_train\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b10a8db164e0754105b7a99be72e3fe5\n"
+      "['/data/nq/natural_questions/v1.0/sample_train/nq-train-49.tf_record']\n"
      ]
     }
    ],
    "source": [
-    "hash_object = hashlib.md5(b'Hello World')\n",
-    "hash_object.hexdigest()"
+    "\n",
+    "train_files = [_file for _file in os.listdir(bert_data_dir) if _file.endswith(\".tf_record\")]\n",
+    "_file_path = [os.path.join(bert_data_dir, _file) for _file in train_files]\n",
+    "[tf.gfile.MakeDirs(_dir) for _dir in [_train_path, _dev_path]]\n",
+    "print(_file_path)\n",
+    "train_input_fn = input_fn_builder(\n",
+    "    input_file=_file_path,\n",
+    "    seq_length=512,\n",
+    "    is_training=True,\n",
+    "    drop_remainder=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocessing.preprocessing import *"
+    "params = {}\n",
+    "params['batch_size'] = 32\n",
+    "_iter = train_input_fn(params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_iter = _iter.make_one_shot_iterator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['end_position', 'input_ids', 'input_mask', 'segment_ids', 'start_position'])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = _iter.get_next()\n",
+    "out.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 512)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INFO:tensorflow:Using /tmp/tfhub_modules to cache modules.\n",
       "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
      ]
     }
@@ -83,56 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-603305005776901102"
+       "60"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hash('data/v1.0_sample_nq-train-sample.jsonl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json_lines\n",
-    "import os\n",
-    "data = []\n",
-    "with open('data/v1.0_sample_nq-train-sample.jsonl', 'rb') as f: # opening file in binary(rb) mode    \n",
-    "   for item in json_lines.reader(f):\n",
-    "       data.append(item) #or use print(item['X']) for printing specific data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data)"
+    "len(dt)"
    ]
   },
   {
@@ -146,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +201,7 @@
        "dict_keys(['annotations', 'document_html', 'document_title', 'document_tokens', 'document_url', 'example_id', 'long_answer_candidates', 'question_text', 'question_tokens'])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4197,9 +4243,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3tf",
+   "display_name": "tensorflow_gpuenv",
    "language": "python",
-   "name": "py3tf"
+   "name": "tensorflow_gpuenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4211,7 +4257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
