--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,93 +128,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = tf.constant([[0.2, 0.5, 0.3]])\n",
-    "b = tf.constant([[0.8, 0.1, 0.1]])"
+    "a = tf.constant([[0.2, 0.5, 0.3],[0.8, 0.05, 0.15],[0.3, 0.4, 0.3]])\n",
+    "b = tf.constant([[0.1, 0.8, 0.1],[0.2, 0.5, 0.3],[0.3, 0.35, 0.35]])\n",
+    "# a = tf.constant([[0.2, 0.5, 0.3]])\n",
+    "# b = tf.constant([[0.1, 0.8, 0.1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=11, shape=(1, 1), dtype=float32, numpy=array([[0.24000001]], dtype=float32)>"
+       "<tf.Tensor: id=467, shape=(3, 3, 3), dtype=float32, numpy=\n",
+       "array([[[0.02      , 0.05      , 0.03      ],\n",
+       "        [0.16000001, 0.4       , 0.24000001],\n",
+       "        [0.02      , 0.05      , 0.03      ]],\n",
+       "\n",
+       "       [[0.16000001, 0.01      , 0.03      ],\n",
+       "        [0.4       , 0.025     , 0.075     ],\n",
+       "        [0.24000001, 0.015     , 0.045     ]],\n",
+       "\n",
+       "       [[0.09      , 0.12      , 0.09      ],\n",
+       "        [0.105     , 0.14      , 0.105     ],\n",
+       "        [0.105     , 0.14      , 0.105     ]]], dtype=float32)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.matmul(a,b, transpose_b=True)"
+    "start_logits = tf.expand_dims(a, 1)\n",
+    "end_logits = tf.expand_dims(b,-1)\n",
+    "logits = start_logits * end_logits\n",
+    "logits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_a = tf.expand_dims(a,0)\n",
-    "_b = tf.expand_dims(b,-1)\n",
-    "c = _a * _b\n",
-    "d = c.numpy()"
+    "def argmax_2d(start_logits, end_logits):\n",
+    "  start_logits = tf.expand_dims(start_logits, 1)\n",
+    "  end_logits = tf.expand_dims(end_logits,-1)\n",
+    "  logits = start_logits * end_logits\n",
+    "  flat_logits = tf.reshape(logits, shape=[tf.shape(logits)[0], -1])\n",
+    "  _argmax = tf.cast(tf.argmax(flat_logits, axis=-1), dtype=tf.int32)\n",
+    "  return _argmax % tf.shape(logits)[1], _argmax // tf.shape(logits)[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=204, shape=(1, 3), dtype=int64, numpy=array([[0, 0, 0]])>"
+       "(<tf.Tensor: id=518, shape=(3,), dtype=int32, numpy=array([1, 0, 1], dtype=int32)>,\n",
+       " <tf.Tensor: id=524, shape=(3,), dtype=int32, numpy=array([1, 1, 1], dtype=int32)>)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "indices = tf.argmax(c, axis=1)\n",
-    "indices % 3"
+    "argmax_2d(a,b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Non-scalar tensor <tf.Tensor: id=192, shape=(1, 3), dtype=bool, numpy=array([[False, False, False]])> cannot be converted to boolean.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-7d94a3f6e34c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcol_indices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindices\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mrow_indices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindices\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfinal_indices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow_indices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mfinal_indices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda2/envs/py3tf/lib/python3.6/site-packages/tensorflow/python/ops/array_ops.py\u001b[0m in \u001b[0;36mstack\u001b[0;34m(values, axis, name)\u001b[0m\n\u001b[1;32m    868\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mvalue_shape\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    869\u001b[0m     \u001b[0mexpanded_num_dims\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue_shape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 870\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mexpanded_num_dims\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mexpanded_num_dims\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    871\u001b[0m       raise ValueError(\"axis = %d not in [%d, %d)\" % (axis, -expanded_num_dims,\n\u001b[1;32m    872\u001b[0m                                                       expanded_num_dims))\n",
-      "\u001b[0;32m~/anaconda2/envs/py3tf/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m__bool__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    912\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_shape_tuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=g-explicit-bool-comparison\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    913\u001b[0m       raise ValueError(\n\u001b[0;32m--> 914\u001b[0;31m           \"Non-scalar tensor %s cannot be converted to boolean.\" % repr(self))\n\u001b[0m\u001b[1;32m    915\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    916\u001b[0m       raise ValueError(\n",
-      "\u001b[0;31mValueError\u001b[0m: Non-scalar tensor <tf.Tensor: id=192, shape=(1, 3), dtype=bool, numpy=array([[False, False, False]])> cannot be converted to boolean."
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "#indices = tf.argmax(c, axis=1)  # this gives you indices from 0 to 600^2\n",
-    "col_indices = indices / 3\n",
-    "row_indices = indices % 3\n",
-    "final_indices = tf.transpose(tf.stack(col_indices, row_indices))\n",
-    "final_indices"
+    "4 % 3"
    ]
   },
   {
@@ -909,9 +920,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3tf",
+   "display_name": "tensorflow_gpuenv",
    "language": "python",
-   "name": "py3tf"
+   "name": "tensorflow_gpuenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -923,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
