add test cases. start precision recall

--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -26,36 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def argmax_2d(start_l, end_l):\n",
-    "    #TODO: Fix the score.\n",
-    "    \"\"\"\n",
-    "    argmax over start and end logits\n",
-    "    :param start_l:\n",
-    "    :param end_l:\n",
-    "    :return: score, [batch_size, 2]\n",
-    "    \"\"\"\n",
-    "    start_l = tf.expand_dims(start_l, 1)\n",
-    "    end_l = tf.expand_dims(end_l, -1)\n",
-    "    logits = start_l * end_l\n",
-    "    flat_logits = tf.reshape(logits, shape=[tf.shape(logits)[0], -1])\n",
-    "    _argmax = tf.cast(tf.argmax(flat_logits, axis=-1), dtype=tf.int32)\n",
-    "    ix = tf.cast(tf.stack([_argmax % tf.shape(logits)[1], _argmax // tf.shape(logits)[2]], axis=-1), dtype=tf.int64)\n",
-    "    return tf.cast(tf.reduce_max(logits, axis=-1), tf.int64), ix\n",
-    "\n",
-    "\n",
-    "def span_accuracy(start_logits, end_logits, start_positions, end_positions):\n",
+    "def span_accuracy(predictions, positions, n_way=5):\n",
     "    \"\"\"\n",
     "    Exact span match.\n",
-    "        pred -> [10,20] gt -> [10,20] : True\n",
-    "        pred -> [10,20] gt -> [10,15] : False\n",
-    "    :param start_logits: [batch_size, seq_length]\n",
-    "    :param end_logits: [batch_size, seq_length]\n",
-    "    :param start_positions: [batch_size]\n",
-    "    :param end_positions: [batch_size]\n",
+    "    :param predictions: [batch_size, 2]\n",
+    "    :param positions: [batch_size, 5, 2]\n",
     "    :return: a tuple of:\n",
     "        accuracy: A `Tensor` representing the accuracy, the value of `total` divided\n",
     "          by `count`.\n",
@@ -63,101 +42,130 @@
     "          appropriately and whose value matches `accuracy`.\n",
     "    \"\"\"\n",
     "\n",
-    "    _, y_pred_ix = argmax_2d(start_logits, end_logits)\n",
-    "    start_positions = tf.expand_dims(start_positions, axis=-1)\n",
-    "    end_positions = tf.expand_dims(end_positions, axis=-1)\n",
-    "    y_true_ix = tf.concat([start_positions, end_positions], axis=-1)  # [batch_size, 2]\n",
-    "    diff = y_true_ix - y_pred_ix\n",
-    "    # difference between prediction and true_ix for debudding purposes.\n",
-    "    tf.summary.histogram('start_diff', diff[:, 0])\n",
-    "    tf.summary.histogram('end_diff', diff[:, 1])\n",
-    "    acc = tf.reduce_all(math_ops.equal(y_true_ix, y_pred_ix), axis=-1)\n",
-    "    is_correct = math_ops.to_float(acc)\n",
-    "    return metrics.mean(is_correct)"
+    "    predictions = tf.stack(n_way * [predictions], axis=1)\n",
+    "    is_correct = tf.reduce_any(tf.equal(tf.reduce_sum(tf.cast(math_ops.equal(predictions, positions), tf.int64),axis=-1), 2),axis=-1)\n",
+    "    return is_correct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=645, shape=(3, 5, 2), dtype=int32, numpy=\n",
+       "array([[[ 1,  2],\n",
+       "        [ 4,  5],\n",
+       "        [ 3,  5],\n",
+       "        [ 3,  5],\n",
+       "        [ 1,  5]],\n",
+       "\n",
+       "       [[10, 11],\n",
+       "        [10, 11],\n",
+       "        [ 9, 12],\n",
+       "        [ 3,  5],\n",
+       "        [ 3,  5]],\n",
+       "\n",
+       "       [[30, 31],\n",
+       "        [29, 39],\n",
+       "        [ 9, 12],\n",
+       "        [ 3,  5],\n",
+       "        [ 3,  5]]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tensorflow import metrics\n",
+    "n_way = 5\n",
+    "predictions = tf.constant([[1,2],[10,12],[30,30]])\n",
+    "positions = tf.constant([[[1,2],[4,5],[3,5],[3,5],[1,5]],\n",
+    "                        [[10,11],[10,11],[9,12],[3,5],[3,5]],\n",
+    "                        [[30,31],[29,39],[9,12],[3,5],[3,5]]])\n",
+    "#predictions = tf.stack(n_way * [predictions], axis=1)\n",
+    "#math_ops.equal(predictions, positions)\n",
+    "positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=642, shape=(3,), dtype=bool, numpy=array([ True, False, False])>"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "span_accuracy(predictions, positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=652, shape=(3, 2), dtype=int32, numpy=\n",
+       "array([[ 1,  2],\n",
+       "       [10, 11],\n",
+       "       [30, 31]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positions[:,0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = tf.constant([[0.1, 0.4, 0.5],[0.1, 0.4, 0.5],[0.1, 0.9, 0.5]])\n",
-    "b = tf.constant([[0.1, 0.4, 0.5],[0.5, 0.4, 0.1],[0.1, 0.9, 0.5]])"
+    "start_l = tf.constant([[0.1, 0.4, 0.5],[0.1, 0.4, 0.5],[0.1, 0.9, 0.5]])\n",
+    "end_l = tf.constant([[0.1, 0.4, 0.5],[0.5, 0.4, 0.1],[0.1, 0.9, 0.5]])\n",
+    "\n",
+    "start_l = tf.math.exp(start_l)\n",
+    "end_l = tf.math.exp(end_l)\n",
+    "start_l = tf.expand_dims(start_l, 1)\n",
+    "end_l = tf.expand_dims(end_l, -1)\n",
+    "#TODO: mask end preceeding statt.\n",
+    "logits = start_l * end_l\n",
+    "flat_logits = tf.reshape(logits, shape=[tf.shape(logits)[0], -1])\n",
+    "logits = tf.linalg.LinearOperatorLowerTriangular(logits).to_dense()\n",
+    "flat_logits = tf.reshape(logits, shape=[tf.shape(logits)[0], -1])\n",
+    "_argmax = tf.cast(tf.argmax(flat_logits, axis=-1), dtype=tf.int32)\n",
+    "ix = tf.cast(tf.stack([_argmax % tf.shape(logits)[1], _argmax // tf.shape(logits)[2]], axis=-1), dtype=tf.int64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=32, shape=(3, 2), dtype=int64, numpy=\n",
-       "array([[2, 2],\n",
-       "       [2, 0],\n",
-       "       [1, 1]])>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "score, y_pred_ix = argmax_2d(a,b)\n",
-    "y_pred_ix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=46, shape=(3, 2), dtype=int64, numpy=\n",
-       "array([[2, 2],\n",
-       "       [2, 0],\n",
-       "       [0, 1]])>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "start_positions = tf.cast(tf.constant([2,2,0]), dtype=tf.int64)\n",
-    "end_positions = tf.cast(tf.constant([2,0,1]), dtype=tf.int64)\n",
-    "start_positions = tf.expand_dims(start_positions, axis=-1)\n",
-    "end_positions = tf.expand_dims(end_positions, axis=-1)\n",
-    "y_true_ix = tf.concat([start_positions, end_positions], axis=-1)  # [batch_size, 2]\n",
-    "y_true_ix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=51, shape=(3,), dtype=float32, numpy=array([1., 1., 0.], dtype=float32)>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "acc = tf.reduce_all(math_ops.equal(y_true_ix, y_pred_ix), axis=-1)\n",
-    "is_correct = math_ops.to_float(acc)\n",
-    "is_correct"
+    "##########################################\n",
+    "### Testing the preprocessing module   ###\n",
+    "##########################################"
    ]
   },
   {
@@ -166,10 +174,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##########################################\n",
-    "### Testing the preprocessing module   ###\n",
-    "##########################################\n",
-    "\n",
     "from preprocessing.preprocessing import convert_example\n",
     "\n",
     "def create_tokenizer_from_hub_module():\n",
