precision recall done

--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -49,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=645, shape=(3, 5, 2), dtype=int32, numpy=\n",
+       "<tf.Tensor: id=666, shape=(3, 5, 2), dtype=int32, numpy=\n",
        "array([[[ 1,  2],\n",
        "        [ 4,  5],\n",
        "        [ 3,  5],\n",
@@ -75,7 +75,7 @@
        "        [ 3,  5]]], dtype=int32)>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,45 +94,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=642, shape=(3,), dtype=bool, numpy=array([ True, False, False])>"
+       "<tf.Tensor: id=787, shape=(4,), dtype=bool, numpy=array([ True, False, False,  True])>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "span_accuracy(predictions, positions)"
+    "_accuracy = span_accuracy(predictions, positions)\n",
+    "_accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=652, shape=(3, 2), dtype=int32, numpy=\n",
-       "array([[ 1,  2],\n",
-       "       [10, 11],\n",
-       "       [30, 31]], dtype=int32)>"
+       "(<tf.Tensor: id=1529, shape=(), dtype=float64, numpy=0.5>,\n",
+       " <tf.Tensor: id=1533, shape=(), dtype=float64, numpy=0.5>)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "positions[:,0,:]"
+    "#####################\n",
+    "# precision / recall#\n",
+    "#####################\n",
+    "predictions = tf.constant([[0,0], [1,2], [0,0], [30,30]]) # TN, FP, FN, TP,  \n",
+    "positions = tf.constant([[[0,0],[0,0],[0,0],[0,0],[0,0]],\n",
+    "                         [[0,0],[0,0],[0,0],[0,0],[0,0]],\n",
+    "                        [[10,12],[10,11],[9,12],[3,5],[3,5]],\n",
+    "                        [[30,30],[29,39],[9,12],[3,5],[3,5]]])\n",
+    "_accuracy = span_accuracy(predictions, positions)\n",
+    "_equal = tf.cast(math_ops.equal(positions, 0), tf.int64)\n",
+    "labels = tf.reduce_any(tf.not_equal(tf.reduce_sum(_equal, axis=-1), 2), -1)\n",
+    "labels\n",
+    "tp = tf.reduce_sum(tf.cast(math_ops.logical_and(math_ops.equal(_accuracy, True), math_ops.equal(labels, False)), tf.int64))\n",
+    "fp = tf.reduce_sum(tf.cast(math_ops.logical_and(math_ops.equal(_accuracy, True), math_ops.equal(labels, True)), tf.int64))\n",
+    "fn = tf.reduce_sum(tf.cast(math_ops.logical_and(math_ops.equal(_accuracy, False), math_ops.equal(labels, True)), tf.int64))\n",
+    "precision = tp / (tp + fp)\n",
+    "recall = tp / (tp + fn)\n",
+    "precision, recall\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=882, shape=(4,), dtype=bool, numpy=array([False,  True, False,  True])>"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision = math_ops.logical_and(math_ops.equal(labels, True), math_ops.equal(predictions, False))"
    ]
   },
   {
@@ -575,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,32 +655,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'annotation_id': 7719528322202775345,\n",
-       "  'long_answer': {'candidate_index': 58,\n",
-       "   'end_byte': 84070,\n",
-       "   'end_token': 965,\n",
-       "   'start_byte': 81195,\n",
-       "   'start_token': 809},\n",
-       "  'short_answers': [{'end_byte': 82556,\n",
-       "    'end_token': 838,\n",
-       "    'start_byte': 81281,\n",
-       "    'start_token': 814}],\n",
+       "[{'annotation_id': 4831085488325731996,\n",
+       "  'long_answer': {'candidate_index': -1,\n",
+       "   'end_byte': -1,\n",
+       "   'end_token': -1,\n",
+       "   'start_byte': -1,\n",
+       "   'start_token': -1},\n",
+       "  'short_answers': [],\n",
+       "  'yes_no_answer': 'NONE'},\n",
+       " {'annotation_id': 11617036854844010808,\n",
+       "  'long_answer': {'candidate_index': -1,\n",
+       "   'end_byte': -1,\n",
+       "   'end_token': -1,\n",
+       "   'start_byte': -1,\n",
+       "   'start_token': -1},\n",
+       "  'short_answers': [],\n",
+       "  'yes_no_answer': 'NONE'},\n",
+       " {'annotation_id': 15568189459232688585,\n",
+       "  'long_answer': {'candidate_index': -1,\n",
+       "   'end_byte': -1,\n",
+       "   'end_token': -1,\n",
+       "   'start_byte': -1,\n",
+       "   'start_token': -1},\n",
+       "  'short_answers': [],\n",
+       "  'yes_no_answer': 'NONE'},\n",
+       " {'annotation_id': 10333790090572531291,\n",
+       "  'long_answer': {'candidate_index': -1,\n",
+       "   'end_byte': -1,\n",
+       "   'end_token': -1,\n",
+       "   'start_byte': -1,\n",
+       "   'start_token': -1},\n",
+       "  'short_answers': [],\n",
+       "  'yes_no_answer': 'NONE'},\n",
+       " {'annotation_id': 15453965265736125661,\n",
+       "  'long_answer': {'candidate_index': -1,\n",
+       "   'end_byte': -1,\n",
+       "   'end_token': -1,\n",
+       "   'start_byte': -1,\n",
+       "   'start_token': -1},\n",
+       "  'short_answers': [],\n",
        "  'yes_no_answer': 'NONE'}]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_examples[1]"
+    "dev_examples[1]"
    ]
   },
   {
