bugs. start readme

--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -1779,9 +1779,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3tf",
+   "display_name": "tensorflow_gpuenv",
    "language": "python",
-   "name": "py3tf"
+   "name": "tensorflow_gpuenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1793,7 +1793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
