inference file writer

--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -1775,6 +1775,93 @@
    "source": [
     "[token for token in tokens if token['start_byte'] >= start_byte_ix and token['end_byte'] <= end_byte_ix]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     1610\n",
+       "2     1360\n",
+       "3     1322\n",
+       "4      653\n",
+       "5      285\n",
+       "6      152\n",
+       "7       53\n",
+       "8       17\n",
+       "9       14\n",
+       "10      10\n",
+       "11       2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "########################\n",
+    "### post-processing   ##\n",
+    "########################\n",
+    "import json\n",
+    "predictions_file = '/Users/deniz/natural_questions/data/predictions.json'\n",
+    "candidate_file = '/Users/deniz/natural_questions/data/candidates.json'\n",
+    "with open(candidate_file) as f:\n",
+    "    candidates = json.load(f)\n",
+    "with open(predictions_file) as f:\n",
+    "    predictions_file = json.load(f)\n",
+    "import pandas as pd\n",
+    "predictions = pd.DataFrame(predictions_file)\n",
+    "predictions.groupby('example_id').size().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5478, 7830, 0.7)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of eaxmples predictions generated for vs number of examples in dev dataset.\n",
+    "# this probably happens because the preprocessing does not extract any spans from the example with labels.\n",
+    "len(set(predictions['example_id'])), len(set(candidates)), round(len(set(predictions['example_id']))/ float(len(set(candidates))), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5474625775830595"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_max = predictions.sort_values('score', ascending=False).groupby('example_id').head(1)\n",
+    "# 54% of predictions have an answer. \n",
+    "(predictions_max['start_byte'] != 0).mean()"
+   ]
   }
  ],
  "metadata": {
