--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,13 @@
     "import tensorflow_hub as hub\n",
     "import numpy as np\n",
     "import hashlib\n",
+    "import glob\n",
     "import os\n",
     "from tensorflow.python.ops import math_ops\n",
+    "from collections import Counter\n",
     "\n",
     "from tensorflow.metrics import accuracy\n",
+    "\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -27,11 +30,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "tf.enable_eager_execution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## send location supervision signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/deniz/natural_questions/data/nq-train-46.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jsonlines\n",
+    "\n",
+    "_train_file_path = '/Users/deniz/natural_questions/data/nq-train-*.jsonl'\n",
+    "train_files = glob.glob(_train_file_path)\n",
+    "train_examples = []\n",
+    "for _train_file in train_files:\n",
+    "    print(_train_file)\n",
+    "    with jsonlines.open(_train_file) as reader:\n",
+    "        for i, example in enumerate(reader):\n",
+    "            # pop ununsed keys\n",
+    "            del example['document_html']\n",
+    "            train_examples.append(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({2: 2,\n",
+       "         3: 14,\n",
+       "         4: 16,\n",
+       "         5: 11,\n",
+       "         6: 28,\n",
+       "         7: 25,\n",
+       "         8: 20,\n",
+       "         9: 21,\n",
+       "         10: 21,\n",
+       "         11: 24,\n",
+       "         12: 22,\n",
+       "         13: 24,\n",
+       "         14: 26,\n",
+       "         15: 32,\n",
+       "         16: 18,\n",
+       "         17: 21,\n",
+       "         18: 19,\n",
+       "         19: 23,\n",
+       "         20: 18,\n",
+       "         21: 14,\n",
+       "         22: 13,\n",
+       "         23: 16,\n",
+       "         24: 24,\n",
+       "         25: 14,\n",
+       "         26: 14,\n",
+       "         27: 15,\n",
+       "         28: 14,\n",
+       "         29: 22,\n",
+       "         30: 12,\n",
+       "         31: 15,\n",
+       "         32: 9,\n",
+       "         33: 15,\n",
+       "         34: 14,\n",
+       "         35: 7,\n",
+       "         36: 12,\n",
+       "         37: 5,\n",
+       "         38: 10,\n",
+       "         39: 7,\n",
+       "         40: 5,\n",
+       "         41: 7,\n",
+       "         42: 11,\n",
+       "         43: 10,\n",
+       "         44: 8,\n",
+       "         45: 6,\n",
+       "         46: 4,\n",
+       "         47: 6,\n",
+       "         48: 10,\n",
+       "         49: 8,\n",
+       "         50: 9,\n",
+       "         51: 9,\n",
+       "         52: 7,\n",
+       "         53: 3,\n",
+       "         54: 9,\n",
+       "         55: 7,\n",
+       "         56: 5,\n",
+       "         57: 5,\n",
+       "         58: 13,\n",
+       "         59: 5,\n",
+       "         60: 6,\n",
+       "         61: 5,\n",
+       "         62: 6,\n",
+       "         63: 10,\n",
+       "         64: 7,\n",
+       "         65: 2,\n",
+       "         66: 10,\n",
+       "         67: 2,\n",
+       "         68: 4,\n",
+       "         69: 4,\n",
+       "         70: 2,\n",
+       "         71: 2,\n",
+       "         72: 3,\n",
+       "         73: 3,\n",
+       "         74: 3,\n",
+       "         75: 3,\n",
+       "         76: 2,\n",
+       "         77: 3,\n",
+       "         78: 4,\n",
+       "         79: 3,\n",
+       "         80: 6,\n",
+       "         81: 5,\n",
+       "         82: 3,\n",
+       "         83: 5,\n",
+       "         84: 4,\n",
+       "         85: 1,\n",
+       "         87: 3,\n",
+       "         88: 2,\n",
+       "         89: 2,\n",
+       "         91: 3,\n",
+       "         92: 2,\n",
+       "         94: 1,\n",
+       "         95: 2,\n",
+       "         96: 5,\n",
+       "         97: 3,\n",
+       "         98: 3,\n",
+       "         99: 1,\n",
+       "         100: 3,\n",
+       "         101: 1,\n",
+       "         102: 3,\n",
+       "         103: 1,\n",
+       "         104: 1,\n",
+       "         105: 3,\n",
+       "         106: 2,\n",
+       "         107: 2,\n",
+       "         108: 1,\n",
+       "         110: 2,\n",
+       "         111: 1,\n",
+       "         112: 4,\n",
+       "         113: 2,\n",
+       "         115: 2,\n",
+       "         118: 3,\n",
+       "         119: 3,\n",
+       "         121: 1,\n",
+       "         122: 4,\n",
+       "         123: 1,\n",
+       "         124: 3,\n",
+       "         125: 2,\n",
+       "         126: 1,\n",
+       "         127: 1,\n",
+       "         128: 3,\n",
+       "         132: 1,\n",
+       "         133: 1,\n",
+       "         137: 1,\n",
+       "         139: 1,\n",
+       "         140: 1,\n",
+       "         143: 1,\n",
+       "         146: 2,\n",
+       "         149: 2,\n",
+       "         150: 2,\n",
+       "         152: 1,\n",
+       "         159: 1,\n",
+       "         160: 1,\n",
+       "         176: 1,\n",
+       "         178: 1,\n",
+       "         181: 1,\n",
+       "         183: 1,\n",
+       "         184: 1,\n",
+       "         187: 1,\n",
+       "         188: 1,\n",
+       "         195: 2,\n",
+       "         198: 1,\n",
+       "         202: 1,\n",
+       "         215: 1,\n",
+       "         232: 1,\n",
+       "         278: 1,\n",
+       "         321: 1,\n",
+       "         737: 1})"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_context_ids = []\n",
+    "for _example in train_examples[:1000]:\n",
+    "    top_level_candidates = [c for c in _example['long_answer_candidates'] if c['top_level']]\n",
+    "    context_ids = [(i,c['start_byte']) for i, c in enumerate(top_level_candidates)]\n",
+    "    nb_context_ids.append(len(context_ids))\n",
+    "Counter(nb_context_ids)"
    ]
   },
   {
@@ -162,11 +370,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocessing.preprocessing import convert_example\n",
+    "#from preprocessing.preprocessing import convert_example\n",
     "\n",
     "def create_tokenizer_from_hub_module():\n",
     "    \"\"\"Get the vocab file and casing info from the Hub module.\"\"\"\n",
@@ -178,25 +386,44 @@
     "                                                  tokenization_info[\"do_lower_case\"]])\n",
     "\n",
     "    return bert.tokenization.FullTokenizer(\n",
-    "        vocab_file=vocab_file, do_lower_case=do_lower_case)"
+    "        vocab_file=vocab_file, do_lower_case=do_lower_case), vocab_file, do_lower_case"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Using /var/folders/lc/hb9bf06j1rxbfpk731_nt7g40000gp/T/tfhub_modules to cache modules.\n",
       "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
      ]
     }
    ],
    "source": [
-    "token = create_tokenizer_from_hub_module()"
+    "token, vocab_file, do_lower_case = create_tokenizer_from_hub_module()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do_lower_case\n"
    ]
   },
   {
@@ -2471,9 +2698,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow_gpuenv",
+   "display_name": "py3tf",
    "language": "python",
-   "name": "tensorflow_gpuenv"
+   "name": "py3tf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2485,7 +2712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
