--- a/error_analysis.ipynb
+++ b/error_analysis.ipynb
@@ -92,6 +92,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'annotation_id': 5465334731230772859,\n",
+       "  'long_answer': {'candidate_index': -1,\n",
+       "   'end_byte': -1,\n",
+       "   'end_token': -1,\n",
+       "   'start_byte': -1,\n",
+       "   'start_token': -1},\n",
+       "  'short_answers': [],\n",
+       "  'yes_no_answer': 'NONE'}]"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_examples[0]['annotations']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
